# ucsd-psystem-fs

./: .gitignore  AUTHORS  BUILDING  LICENSE  Makefile.in  README  aegis.conf  configure  meson.build
aegis.conf.d/: aemakegen  architecture  attributes  build  develop_end_policy  diff  file_template
aegis.file.template/: cc  generic  h  man  so  test.sh
debian/: changelog  control  copyright  rules  ucsd-psystem-fs-doc.install  ucsd-psystem-fs.install
etc/: BUILDING.man  Howto.conf.in  Makefile.file.sh  Makefile.head  Makefile.sh  README.man  apt-get-depends.cook  autoconf.cook  change_log.man  check-tarball.sh  check_libexplain_uses.sh  configure.ac  documentation.cook  howto.cook  metrics.cook  new.sh  page-list.awk  ppa-upload.sh  ref-ptx.ignore  ref-ptx.sh  ref-ptx1.awk  ref-ptx2.awk  reference.man  tags.cook  ucsd-psystem-fs.lsm
lib/: byte_sex.cc  byte_sex.h  concern.cc  concern.h  config.h.in  config.messy.h  debug.cc  debug.h  directory.cc  directory.h  endof.h  format_printf.h  fstrcmp.cc  fstrcmp.h  fuse.h  hexdump.cc  hexdump.h  input.cc  input.h  meson.build  mesonconfig.h.in  mtype.cc  mtype.h  output.cc  output.h  patchlevel.h  pretty_size.cc  pretty_size.h  rcstring.cc  rcstring.h  sector_io.cc  sector_io.h  version.cc  version.h  version_stamp.cc  version_stamp.h
lib/directory/: boot.cc  entry.cc  entry.h  factory.cc  print_listing.cc
lib/directory/entry/: file.cc  file.h  list.cc  list.h  volume_label.cc  volume_label.h
lib/directory/entry/file/: text.cc  text.h
lib/input/: file.cc  file.h  psystem.cc  psystem.h  stdin.cc  stdin.h
lib/output/: file.cc  file.h  from_input.cc  memory.cc  memory.h  psystem.cc  psystem.h  stdout.cc  stdout.h  text_decode.cc  text_decode.h  text_encode.cc  text_encode.h
lib/rcstring/: accumulator.cc  accumulator.h  basename.cc  bool.cc  capitalize.cc  catenate.cc  clear.cc  dirname.cc  downcase.cc  ends_with_nc.cc  field.cc  gizzards.cc  gizzards.h  identifier.cc  lead_prefix.cc  list.h  long.cc  printf.cc  quote.cc  quote_c.cc  relative.cc  replace.cc  starts_with_nc.cc  substring.cc  traili_suffi.cc  trim.cc  upcase.cc
lib/rcstring/accumulator/: grow.cc  overwrite.cc  printf.cc  set_size.cc
lib/rcstring/list/: appelistuniq.cc  append.cc  append_list.cc  append_uniqu.cc  assign_op.cc  clear.cc  constructor.cc  copy.cc  destructor.cc  equal.cc  intersection.cc  member.cc  member_nocas.cc  pop_back.cc  pop_front.cc  prepend.cc  prepend_list.cc  quote.cc  remove.cc  remove_list.cc  sort.cc  sort_long_short.cc  sort_nocase.cc  sort_vers.cc  str2wl.cc  subset.cc  validate.cc  wl2str.cc  xor.cc
lib/sector_io/: apple.cc  apple.h  factory.cc  guess.cc  imd.cc  imd.h  interleave_factory.cc  mmap.cc  mmap.h  offset.cc  offset.h  pdp.cc  pdp.h  raw.cc  raw.h  read.cc  relocate.cc  td0.cc  td0.h  write.cc  write_zero.cc
man/: meson.build
man/man1/: ucsdpsys_disk.1  ucsdpsys_fs_license.1  ucsdpsys_fsck.1  ucsdpsys_interleave.1  ucsdpsys_mkfs.1  ucsdpsys_mount.1  ucsdpsys_rt11.1  ucsdpsys_text.1  ucsdpsys_umount.1
man/man5/: ucsdpsys_fs.5  ucsdpsys_text.5
script/: test_prelude
test/00/: meson.build  t0001a.sh  t0002a.sh  t0003a.sh  t0005a.sh  t0006a.sh  t0007a.sh  t0008a.sh  t0009a.sh  t0010a.sh  t0011a.sh  t0015a.sh  t0016a.sh  t0017a.sh  t0018a.sh  t0019a.sh  t0020a.sh  t0021a.sh  t0022a.sh  t0023a.sh  t0025a.sh  t0026a.sh  t0027a.sh  t0028a.sh  t0029a.sh  t0030a.sh  t0031a.sh
test_rdwr/: main.cc  meson.build
test_statfs/: main.cc  meson.build
ucsdpsys_disk/: main.cc  meson.build
ucsdpsys_fsck/: main.cc  meson.build
ucsdpsys_interleave/: main.cc  meson.build
ucsdpsys_logo/: main.cc  meson.build
ucsdpsys_mkfs/: main.cc  meson.build
ucsdpsys_mount/: main.cc  meson.build
ucsdpsys_rt11/: main.cc  meson.build
ucsdpsys_text/: main.cc  meson.build
ucsdpsys_umount/: main.cc  meson.build
web/: download.roff  icon.png.uue  index.roff  logo.png.uue  module.cook
