conf = configuration_data()

if cpp.has_function('mmap', prefix : '#include <sys/mman.h>')
  conf.set('HAVE_MMAP', 1)
endif
if cpp.has_function('usleep', prefix : '#include <unistd.h>')
  conf.set('HAVE_USLEEP', 1)
endif

lib_config_h = configure_file(
  input : 'mesonconfig.h.in',
  output : 'config.h',
  configuration : conf,
)

lib_sources = [
  lib_config_h,
  'output.cc',
  'byte_sex.cc',
  'version_stamp.cc',
  'input.cc',
  'input/stdin.cc',
  'input/file.cc',
  'input/psystem.cc',
  'concern.cc',
  'sector_io/td0.cc',
  'sector_io/mmap.cc',
  'sector_io/read.cc',
  'sector_io/pdp.cc',
  'sector_io/imd.cc',
  'sector_io/relocate.cc',
  'sector_io/guess.cc',
  'sector_io/raw.cc',
  'sector_io/write_zero.cc',
  'sector_io/offset.cc',
  'sector_io/factory.cc',
  'sector_io/interleave_factory.cc',
  'sector_io/write.cc',
  'sector_io/apple.cc',
  'rcstring/starts_with_nc.cc',
  'rcstring/replace.cc',
  'rcstring/upcase.cc',
  'rcstring/substring.cc',
  'rcstring/field.cc',
  'rcstring/lead_prefix.cc',
  'rcstring/accumulator.cc',
  'rcstring/list/appelistuniq.cc',
  'rcstring/list/assign_op.cc',
  'rcstring/list/member.cc',
  'rcstring/list/constructor.cc',
  'rcstring/list/str2wl.cc',
  'rcstring/list/append_list.cc',
  'rcstring/list/xor.cc',
  'rcstring/list/sort_long_short.cc',
  'rcstring/list/member_nocas.cc',
  'rcstring/list/intersection.cc',
  'rcstring/list/pop_back.cc',
  'rcstring/list/prepend_list.cc',
  'rcstring/list/sort_nocase.cc',
  'rcstring/list/append.cc',
  'rcstring/list/wl2str.cc',
  'rcstring/list/sort.cc',
  'rcstring/list/validate.cc',
  'rcstring/list/quote.cc',
  'rcstring/list/append_uniqu.cc',
  'rcstring/list/equal.cc',
  'rcstring/list/destructor.cc',
  'rcstring/list/pop_front.cc',
  'rcstring/list/remove.cc',
  'rcstring/list/remove_list.cc',
  'rcstring/list/clear.cc',
  'rcstring/list/sort_vers.cc',
  'rcstring/list/prepend.cc',
  'rcstring/list/copy.cc',
  'rcstring/list/subset.cc',
  'rcstring/dirname.cc',
  'rcstring/basename.cc',
  'rcstring/traili_suffi.cc',
  'rcstring/trim.cc',
  'rcstring/relative.cc',
  'rcstring/quote.cc',
  'rcstring/downcase.cc',
  'rcstring/long.cc',
  'rcstring/catenate.cc',
  'rcstring/printf.cc',
  'rcstring/capitalize.cc',
  'rcstring/bool.cc',
  'rcstring/ends_with_nc.cc',
  'rcstring/accumulator/set_size.cc',
  'rcstring/accumulator/printf.cc',
  'rcstring/accumulator/grow.cc',
  'rcstring/accumulator/overwrite.cc',
  'rcstring/clear.cc',
  'rcstring/quote_c.cc',
  'rcstring/identifier.cc',
  'rcstring/gizzards.cc',
  'directory/print_listing.cc',
  'directory/boot.cc',
  'directory/entry.cc',
  'directory/entry/volume_label.cc',
  'directory/entry/file.cc',
  'directory/entry/file/text.cc',
  'directory/entry/list.cc',
  'directory/factory.cc',
  'debug.cc',
  'directory.cc',
  'sector_io.cc',
  'pretty_size.cc',
  'version.cc',
  'output/text_decode.cc',
  'output/memory.cc',
  'output/file.cc',
  'output/from_input.cc',
  'output/psystem.cc',
  'output/stdout.cc',
  'output/text_encode.cc',
  'mtype.cc',
  'fstrcmp.cc',
  'hexdump.cc',
  'rcstring.cc',
]

lib_lib = static_library(
  'libucsd-psystem-fs',
  sources : lib_sources,
  include_directories : root_inc,
  implicit_include_directories : false,
  dependencies : [libexplain_dep, boost_dep],
  install : false,
)
