env = environment()
env.prepend('PATH', fs.parent(disk_exe.full_path()))
env.prepend('PATH', fs.parent(fsck_exe.full_path()))
env.prepend('PATH', fs.parent(interleave_exe.full_path()))
env.prepend('PATH', fs.parent(logo_exe.full_path()))
env.prepend('PATH', fs.parent(mkfs_exe.full_path()))
env.prepend('PATH', fs.parent(mount_exe.full_path()))
env.prepend('PATH', fs.parent(rt11_exe.full_path()))
env.prepend('PATH', fs.parent(test_rdwr_exe.full_path()))
env.prepend('PATH', fs.parent(test_statfs_exe.full_path()))
env.prepend('PATH', fs.parent(text_exe.full_path()))
env.prepend('PATH', fs.parent(umount_exe.full_path()))
env.prepend('PATH', meson.source_root() / 'script')

test('t0001a', sh, args : files('t0001a.sh'), env : env, depends : [fsck_exe, mkfs_exe,])
test('t0002a', sh, args : files('t0002a.sh'), env : env, depends : [fsck_exe, mkfs_exe, mount_exe, umount_exe,])
test('t0003a', sh, args : files('t0003a.sh'), env : env, depends : [test_rdwr_exe, fsck_exe, mkfs_exe, mount_exe, umount_exe,])
test('t0005a', sh, args : files('t0005a.sh'), env : env, depends : [test_statfs_exe, fsck_exe, mkfs_exe, mount_exe, umount_exe,])
test('t0006a', sh, args : files('t0006a.sh'), env : env, depends : [text_exe,])
test('t0007a', sh, args : files('t0007a.sh'), env : env, depends : [fsck_exe, mkfs_exe, mount_exe, umount_exe,])
test('t0008a', sh, args : files('t0008a.sh'), env : env, depends : [fsck_exe, mkfs_exe, mount_exe, umount_exe,])
test('t0009a', sh, args : files('t0009a.sh'), env : env, depends : [test_rdwr_exe, fsck_exe, mkfs_exe, mount_exe, umount_exe,])
test('t0010a', sh, args : files('t0010a.sh'), env : env, depends : [test_rdwr_exe, fsck_exe, mkfs_exe, mount_exe, umount_exe,])
test('t0011a', sh, args : files('t0011a.sh'), env : env, depends : [disk_exe, fsck_exe, mkfs_exe,])
test('t0015a', sh, args : files('t0015a.sh'), env : env, depends : [disk_exe, mkfs_exe,])
test('t0016a', sh, args : files('t0016a.sh'), env : env, depends : [disk_exe, mkfs_exe,])
test('t0017a', sh, args : files('t0017a.sh'), env : env, depends : [disk_exe, mkfs_exe,])
test('t0018a', sh, args : files('t0018a.sh'), env : env, depends : [disk_exe, mkfs_exe, text_exe,])
test('t0019a', sh, args : files('t0019a.sh'), env : env, depends : [disk_exe, mkfs_exe,])
test('t0020a', sh, args : files('t0020a.sh'), env : env, depends : [disk_exe, mkfs_exe,])
test('t0021a', sh, args : files('t0021a.sh'), env : env, depends : [disk_exe, mkfs_exe,])
test('t0022a', sh, args : files('t0022a.sh'), env : env, depends : [mkfs_exe,])
test('t0023a', sh, args : files('t0023a.sh'), env : env, depends : [disk_exe, mkfs_exe,])
test('t0025a', sh, args : files('t0025a.sh'), env : env, depends : [disk_exe, mkfs_exe,])
test('t0026a', sh, args : files('t0026a.sh'), env : env, depends : [disk_exe,])
test('t0027a', sh, args : files('t0027a.sh'), env : env, depends : [disk_exe, mkfs_exe,])
test('t0028a', sh, args : files('t0028a.sh'), env : env, depends : [mkfs_exe,])
test('t0029a', sh, args : files('t0029a.sh'), env : env, depends : [disk_exe, mkfs_exe,])
test('t0030a', sh, args : files('t0030a.sh'), env : env, depends : [disk_exe, mkfs_exe,])
test('t0031a', sh, args : files('t0031a.sh'), env : env, depends : [disk_exe, mkfs_exe,])
